<resources>
    <string name="app_name">DocuMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="btnClick">+</string>
    <string name="projects_file">projects.txt</string>
    <string name="genre_prompt">Project Genre</string>
    <string name="describe_your_project">"Describe your project&#8230;"</string>
    <string name="describe_this_step">"Describe this step&#8230;"</string>
    <string name="create_a_project">Create A Project</string>
    <string name="project_name">Project Name</string>
    <string name="save_project">Save Project</string>
    <string name="add_a_step">Add A Step</string>
    <string name="save_step">Save Step</string>
    <string name="step_photo">Step Photo</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="step_title">Step title</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>

    <string-array name="genres">
        <item>Arts and Entertainment</item>
        <item>Automotive</item>
        <item>Technology</item>
        <item>Education</item>
        <item>Family</item>
        <item>Money</item>
        <item>Food</item>
        <item>Helth</item>
        <item>Arts and Crafts</item>
        <item>Holidays and Traditions</item>
        <item>Home and Garden</item>
        <item>Personal Care</item>
        <item>Clothing and Style</item>
        <item>Pets</item>
        <item>Religion</item>
        <item>Relationships</item>
        <item>Fitness</item>
        <item>Travel</item>
        <item>Work</item>
        <item>Youth</item>
    </string-array>

</resources>
