<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

<android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/activity_main_drawer" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/after_subtitle_space"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/create_a_project"/>

            <EditText
                android:id="@+id/project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_space"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space"
                android:hint="@string/project_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_space"
                android:layout_marginBottom="@dimen/after_subtitle_space"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space"
                android:text="@string/genre_prompt"
                android:textStyle="bold"
                android:textSize="@dimen/subtitle_font_size"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/genre_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space"
                android:entries="@array/genres"
                android:prompt="@string/genre_prompt" />
            <EditText
                android:id="@+id/project_description"
                android:layout_marginTop="@dimen/content_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:gravity="start"
                android:hint="@string/describe_your_project"
                android:shadowColor="@color/black"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space"
                android:background="@drawable/project_description_style"/>
            <Button
                android:id="@+id/new_step_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/center_button"
                android:layout_marginLeft="@dimen/center_button"
                android:layout_marginRight="@dimen/center_button"
                android:padding="@dimen/indent"
                android:text="@string/add_a_step"
                android:onClick=""
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/save_project_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/center_button"
                android:layout_marginLeft="@dimen/center_button"
                android:layout_marginRight="@dimen/center_button"
                android:padding="@dimen/indent"
                android:text="@string/save_project"
                style="?android:attr/borderlessButtonStyle"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
<!--<?xml version="1.0" encoding="utf-8"?>-->


<!--<android.support.v4.widget.DrawerLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/drawer_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:fitsSystemWindows="true"-->
    <!--tools:openDrawer="start">-->

    <!--<android.support.design.widget.NavigationView-->
        <!--android:id="@+id/nav_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:headerLayout="@layout/nav_header_main"-->
        <!--app:menu="@menu/activity_main_drawer" />-->


    <!--<include-->
        <!--layout="@layout/app_bar_main"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="top"/>-->

    <!--&lt;!&ndash;<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center">&ndash;&gt;-->
    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="fill">-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Project Name"-->
            <!--/>-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Project Name"-->
            <!--/>-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Project Name"-->
            <!--/>-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Project Name"-->
            <!--/>-->
    <!--</LinearLayout>-->
    <!--&lt;!&ndash;</ScrollView>&ndash;&gt;-->


</android.support.v4.widget.DrawerLayout>
